# advent-of-code-2024

./: Cargo.toml  README.md  justfile  shell.nix
daily-template/: Cargo.toml
daily-template/benches/: benches.rs
daily-template/src/: lib.rs
day-01/: Cargo.toml
day-01/benches/: benches.rs
day-01/src/: lib.rs
day-02/: Cargo.toml
day-02/benches/: benches.rs
day-02/src/: lib.rs
day-03/: Cargo.toml
day-03/benches/: benches.rs
day-03/src/: lib.rs
day-05/: Cargo.toml
day-05/benches/: benches.rs
day-05/src/: lib.rs
day-09/: Cargo.toml
day-09/benches/: benches.rs
day-09/src/: lib.rs
