[workspace]
resolver = "2"
members = [
    "day-*"
]

[workspace.dependencies]
fancy-regex = "0.14.0"
nom = "7.1.3"
regex = "1.11.1"
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
criterion = "0.5.1"
rayon = "1.10.0"
rstest = "0.23.0"
