[package]
name = "day-02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.14.0"
itertools = "0.13.0"
nom.workspace = true
regex = "1.11.1"
rstest = "0.23.0"
test-log = { version = "0.2.16", features = ["trace"] }
tracing.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
